[Mac] Use simple ConstrainedWindow animations if DisplayLink is detected.

The private window animation APIs used by ConstrainedWindow tend to crash
the WindowServer when DisplayLink hardware is attached. This change enables
the use of the simple animation style when the DisplayLinkFramebuffer is
found in the IOKit registry.

Bug: 755516
Change-Id: Iae2faa92bb987973f6e94bb3e1ed0d13f3ce3579
Reviewed-on: https://chromium-review.googlesource.com/700424
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506740}
Former-commit-id: 7827a538ddbfacaa0558195ae2dabb6aa556a117