chrome/browser/ui/cocoa/constrained_window/constrained_window_custom_sheet.mm
@@ -4,17 +4,46 @@
 
 #import "chrome/browser/ui/cocoa/constrained_window/constrained_window_custom_sheet.h"
 
+#import <IOKit/IOKitLib.h>
+
+#include "base/mac/mach_logging.h"
+#include "base/mac/scoped_ioobject.h"
 #import "chrome/browser/ui/cocoa/constrained_window/constrained_window_sheet_controller.h"
 #import "ui/base/cocoa/constrained_window/constrained_window_animation.h"
 
+namespace {
+
 // Length of the animation in seconds.
 const NSTimeInterval kAnimationDuration = 0.18;
+
+// If the machine has a DisplayLink device attached, the WindowServer has a
+// tendency to crash https://crbug.com/755516. To avoid this, probe the
+// IOKit registry for a DisplayLink service, and turn on useSimpleAnimations_
+// if one is found. The result of this is not cached, in case the hardware
+// is attached after the first ConstrainedWindow is shown.
+bool HasDisplayLinkDevice() {
+  // The |matching| reference is consumed by IOServiceGetMatchingServices().
+  CFDictionaryRef matching = IOServiceMatching("DisplayLinkFramebuffer");
+  base::mac::ScopedIOObject<io_iterator_t> it;
+  kern_return_t kr = IOServiceGetMatchingServices(
+      kIOMasterPortDefault, matching, it.InitializeInto());
+  if (kr != KERN_SUCCESS) {
+    MACH_LOG(ERROR, kr) << "IOServiceGetMatchingServices";
+    return false;
+  }
+
+  base::mac::ScopedIOObject<io_object_t> object(IOIteratorNext(it));
+  return object != IO_OBJECT_NULL;
+}
+
+}  // namespace
 
 @implementation CustomConstrainedWindowSheet
 
 - (id)initWithCustomWindow:(NSWindow*)customWindow {
   if ((self = [super init])) {
     customWindow_.reset([customWindow retain]);
+    useSimpleAnimations_ = HasDisplayLinkDevice();
   }
   return self;
 }
